app now loads random data but is not quite json-ready yet

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <form name="content-form">
   <!-- <input type="text" name="number" placeholder="How many users?" id="userNum"><br> -->
   <input type="button" value="Generate" name="generateButton" id="generateButton"><br>
-<textarea rows="50" cols="100" name="output" form="content-form" readonly="yes"></textarea><br>
+<textarea id="outputArea" rows="50" cols="100" name="output" form="content-form" readonly="yes"></textarea><br>
 <input type="button" value="Copy to clipboard" name="copyButton">
 </form>
 
