added functionality for clear and select buttons

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 
 <form name="content-form">
   <!-- <input type="text" name="number" placeholder="How many users?" id="userNum"><br> -->
-  <input type="button" value="Generate" name="generateButton" id="generateButton"><br>
+  <input type="button" value="Generate" name="generateButton" id="generateButton">
+  <input type="button" value="Clear" name="clearButton" id="clearButton"><br>
 <textarea id="outputArea" rows="50" cols="100" name="output" form="content-form" readonly="yes"></textarea><br>
-<input type="button" value="Copy to clipboard" name="copyButton">
+<input type="button" value="Select JSON" name="selectButton" id="selectButton">
 </form>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
