--- a/index.html
+++ b/index.html
@@ -10,14 +10,21 @@
   <h1>User Info Creator</h1>
 <p>Welcome to User Info Creator, a simple app to generate user content for testing or prototype purposes.</p>
 <p>This app generates valid JSON in the below field for you to copy-and-paste into your own file.</p>
+<p>Please choose the number of objects you would like to generate (or leave blank for a random number up to 10).</p>
 </div>
 
 <form name="content-form">
-  <input type="text" name="number" placeholder="How many users?" id="userNum"><br>
-  <input type="button" value="Generate" name="generateButton" id="generateButton"><br>
-<textarea id="outputArea" rows="50" cols="100" name="output" form="content-form" readonly="yes"></textarea><br>
+  <input type="text" name="number" placeholder="How many users?" id="userNum"><br><br>
+
+  <label>Select which key/value pairs you want your JSON to include.</label><br>
+  <input type="checkbox" name="first-name" id="firstNameCheck">First Name
+  <input type="checkbox" name="last-name" id="lastNameCheck">Last Name<br>
+  <input type="checkbox" name="job" id="job">Job<br>
+
+  <input type="button" value="Generate" name="generateButton" id="generateButton"><br><br>
+<textarea id="outputArea" rows="50" cols="50" name="output" form="content-form" readonly="yes" placeholder="Your JSON will appear here"></textarea><br>
 <input type="button" value="Select JSON" name="selectButton" id="selectButton">
-<input type="button" value="Clear All" name="clearButton" id="clearButton">
+<input type="button" value="Clear All Fields" name="clearButton" id="clearButton">
 </form>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
