added basic email functionality

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <input type="checkbox" name="first-name" id="firstNameCheck">First Name
   <input type="checkbox" name="last-name" id="lastNameCheck">Last Name<br>
   <input type="checkbox" name="job" id="job">Job<br>
+  <input type="checkbox" name="email" id="email">E-mail<br>
 
   <input type="button" value="Generate" name="generateButton" id="generateButton"><br><br>
 <textarea id="outputArea" rows="50" cols="50" name="output" form="content-form" readonly="yes" placeholder="Your JSON will appear here"></textarea><br>
