--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css" type="text/css">
-<title>User Info Creator</title>
+<title>User Info Generator</title>
 </head>
 <body>
 
 <div class="intro">
-  <h1>User Info Creator</h1>
+  <h1>User Info Generator</h1>
 <p>Welcome to User Info Creator, a simple app to generate user content for testing or prototype purposes.</p>
 <p>This app generates valid JSON in the below field for you to copy-and-paste into your own file.</p>
 </div>
@@ -22,14 +22,14 @@
     <p><input type="checkbox" name="first-name" id="firstNameCheck">First Name
     <input type="checkbox" name="last-name" id="lastNameCheck">Last Name</p>
     <p><input type="checkbox" name="job" id="job">Job</p>
-    <p><input type="checkbox" name="email" id="email">E-mail<br>
-    <input type="text" name="customEmail" id="customEmail" placeholder="custom e-mail domain"> <span class="notes">(optional)</span></p>
+    <p><input type="checkbox" name="email" id="email">E-mail</p>
+    <p><input type="text" name="customEmail" id="customEmail" placeholder="custom e-mail domain"> <span class="notes">(optional)</span></p>
 
-    <input type="button" value="Generate" name="generateButton" id="generateButton"><br><br>
+    <input type="button" value="Generate" name="generateButton" class="button" id="generateButton"><br><br>
   </div>
   <textarea id="outputArea" rows="40" cols="50" name="output" form="content-form" readonly="yes" placeholder="Your JSON will appear here"></textarea><br>
-  <input type="button" value="Select JSON" name="selectButton" id="selectButton">
-  <input type="button" value="Clear All Fields" name="clearButton" id="clearButton">
+  <input type="button" value="Select JSON" name="selectButton" class="button" id="selectButton">
+  <input type="button" value="Clear All Fields" name="clearButton" class="button" id="clearButton">
 </form>
 
 <div class="footer">
