added fake phone number generator and options

--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
     <p><input type="checkbox" name="first-name" id="firstNameCheck">First Name
     <input type="checkbox" name="last-name" id="lastNameCheck">Last Name</p>
     <p><input type="checkbox" name="job" id="job">Job</p>
-    <p><input type="checkbox" name="email" id="email">E-mail   
+    <p><input type="checkbox" name="email" id="email">E-mail
       <input type="text" name="customEmail" id="customEmail" placeholder="custom e-mail domain"> <span class="notes">(optional)</span></p>
+      <p><input type="checkbox" name="phone" id="phone">Phone
+        <input type="text" name="customArea" id="customArea" placeholder="custom area code"> <span class="notes">(optional)</span></p>
+
   </div>
     <span class="button" id="generateButton">Generate</span><br><br>
 
