--- a/index.html
+++ b/index.html
@@ -15,38 +15,13 @@
 <div class="jsonGen">
   <div class="formOptions">
     <form name="content-form">
-<<<<<<< HEAD
-    <p><input type="text" name="number" placeholder="How many users?" id="userNum">
-=======
     <p><input type="text" name="number" placeholder="How many users?" id="userNum"><br>
-<<<<<<< HEAD
->>>>>>> 89f7d5bcacba4732703031812502f9eaec7f8ff2
-      <span class="notes">If this is empty or 0 a random number from 1 to 10 will be generated.</span></p>
-=======
-      <span class="notes">If this is empty, 0, or invalid a random number from 1 to 10 will be generated.</span></p>
->>>>>>> gh-pages
-
+      <span class="notes">(if this is empty, 0, or invalid a random number from 1 to 10 will be generated)</span></p>
     <label>Select which key/value pairs you want your JSON to include:</label>
     <p><input type="checkbox" name="first-name" id="firstNameCheck">First Name
     <input type="checkbox" name="last-name" id="lastNameCheck">Last Name</p>
     <p><input type="checkbox" name="job" id="job">Job</p>
-<<<<<<< HEAD
-<<<<<<< HEAD
-    <p><input type="checkbox" name="email" id="email">E-mail</p>
-    <p><input type="text" name="customEmail" id="customEmail" placeholder="custom e-mail domain"> <span class="notes">(optional)</span></p>
-
-    <input type="button" value="Generate" name="generateButton" class="button" id="generateButton"><br><br>
-  </div>
-  <textarea id="outputArea" rows="40" cols="50" name="output" form="content-form" readonly="yes" placeholder="Your JSON will appear here"></textarea><br>
-  <input type="button" value="Select JSON" name="selectButton" class="button" id="selectButton">
-  <input type="button" value="Clear All Fields" name="clearButton" class="button" id="clearButton">
-</form>
-
-=======
-    <p><input type="checkbox" name="email" id="email">E-mail   
-=======
     <p><input type="checkbox" name="email" id="email">E-mail
->>>>>>> gh-pages
       <input type="text" name="customEmail" id="customEmail" placeholder="custom e-mail domain"> <span class="notes">(optional)</span></p>
       <p><input type="checkbox" name="phone" id="phone">Phone
         <input type="text" name="customArea" id="customArea" placeholder="custom area code"> <span class="notes">(optional)</span></p>
@@ -62,15 +37,11 @@
 </form>
 </div>
 </div>
->>>>>>> 89f7d5bcacba4732703031812502f9eaec7f8ff2
 <div class="footer">
-  <p>Copyright 2015 Leigh Prince</p>
+  <p>Copyright 2015 <a href="http://www.leigh-prince.com">Leigh Prince</a></p>
   <p><a href="mailto:leighprie@gmail.com">E-mail</a> <a href="https://github.com/leighPri/InfoGenerator">GitHub</a></p>
 </div>
-<<<<<<< HEAD
 </div>
-=======
->>>>>>> 89f7d5bcacba4732703031812502f9eaec7f8ff2
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="app.js"></script>
